# arena_system

./: Cargo.toml  README.md
arena_system_proc_macro/: Cargo.toml
arena_system_proc_macro/examples/: test.rs
arena_system_proc_macro/src/: getter.rs  handle.rs  handleable.rs  lib.rs  setter.rs  util.rs
examples/: integer.rs
src/: arena.rs  error.rs  handle.rs  index.rs  lib.rs
