[package]
name = "arena_system"
version = "0.0.3"
edition = "2021"
description = "An arena allocator which uses handles for accessing elements"
categories = ["memory-management"]
authors = ["Alexander Vedekhin"]
repository = "https://github.com/alexanderved/arena_system"
keywords = ["arena"]
license = "MPL-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
vec_cell = "0.1"
